--- a/website/slides/raw_slides/slides_25.qmd
+++ b/website/slides/raw_slides/slides_25.qmd
@@ -143,11 +143,14 @@ points(x[t2_ix], y[t2_ix], pch = 16, col = oi_colors[3])
 
 - [Chu et al. (2019)](https://arxiv.org/pdf/1908.02423): clustering NFL routes
 
-![](chu_routes.png){width=75% fig-align="center"}
+![](chu_routes.png){width=50% fig-align="center"}
 
 ## Bezier Curve Applications III{.smaller}
 
 - Bayesian model: prior over control points $\Rightarrow$ posterior over remaining trajectory
+
+![](ceedee_ix28.png){width=75% fig-align="center"}
+
 
 # Next Steps
 
@@ -212,4 +215,12 @@ points(x[t2_ix], y[t2_ix], pch = 16, col = oi_colors[3])
 - [*Journal of Quantitative Analysis in Sports*](https://www.degruyterbrill.com/journal/key/jqas/html)
   - JQAS requires more statistical sophistication than JAS
 - If you're interested in developing a class project or personal project into a research paper, let's discuss!
+
+## Thanks!
+
+
+- Super appreciate y'all's enthusiasm, effort, & patience
+- Stay in touch!
+
+
 
